# template_methods_paper

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  README.md  STANDALONE.md  TODO.md  codemeta.json  domain_profile.yaml  experiment_plan.yaml  index.html  manuscript__01_introduction.html  manuscript__02_methodology.html  manuscript__03_results.html  manuscript__04_conclusion.html  manuscript__05_experimental_setup.html  manuscript__99_references.html  pyproject.toml
.agents/skills/: AGENTS.md
data/: AGENTS.md  README.md  claim_ledger.yaml
docs/: AGENTS.md  README.md  agent_instructions.md  architecture.md  faq.md  forking_guide.md  output_conventions.md  output_inventory.md  quickstart.md  rendering_pipeline.md  style_guide.md  syntax_guide.md  testing_philosophy.md  troubleshooting.md
manuscript/: 00_abstract.md  01_introduction.md  02_methodology.md  03_results.md  05_experimental_setup.md  06_reproducibility.md  07_scope_and_related_work.md  99_references.md  AGENTS.md  README.md  SYNTAX.md  config.yaml  config.yaml.example  layer_contract.yaml  preamble.md  references.bib
output/data/: compiled_plans.json  manuscript_variables.json  pbspreparation_graph.mmd  (+8 more)
scripts/: AGENTS.md  CONVENTIONS.md  README.md  __init__.py  generate_api_docs.py  methods_analysis.py  z_generate_manuscript_variables.py
src/: AGENTS.md  README.md  STYLE.md  __init__.py  figure_specs.py  manuscript_variables.py  project_paths.py
tests/: AGENTS.md  PATTERNS.md  README.md  conftest.py  test_compiler.py  test_examples_methods.py  test_export.py  test_manuscript_variables.py  test_methods_analysis_script.py  test_model.py  test_project_paths.py  test_trust.py  test_units.py  test_validation.py  test_vocabulary.py
(+100 files in other folders)
